[project]
name = "clawhub-tracker"
version = "0.1.0"
description = "ClawHub skills tracker and scraper"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2",
    "httpx>=0.28",
    "jinja2>=3.1",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
